--- a/cleaning_data_NFL.ipynb
+++ b/cleaning_data_NFL.ipynb
@@ -619,8 +619,8 @@
     "# first the Passing stats\n",
     "stats[stats['Passing_Cmp'].isna()]\n",
     "# These players did not play this year, so we can just remove them\n",
-    "stats = stats.drop(index=('John Brown',2021))\n",
-    "stats = stats.drop(index=('Chris Moore',2024))\n"
+    "# remove players with no data for the year\n",
+    "stats = stats[~stats['Passing_Cmp'].isna()]\n"
    ]
   },
   {
@@ -964,7 +964,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>467 rows × 20 columns</p>\n",
+       "<p>469 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1038,7 +1038,7 @@
        "Colson Yankoff    2024          NaN  \n",
        "Dareke Young      2024          NaN  \n",
        "\n",
-       "[467 rows x 20 columns]"
+       "[469 rows x 20 columns]"
       ]
      },
      "execution_count": 15,
@@ -1131,17 +1131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "add856b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2552, 21)"
+       "(2554, 22)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,6 +1149,9 @@
    "source": [
     "# move the fantasy score to the next year and renmame the column to PPR_NextYear\n",
     "stats['Fantasy_PPR_NextYear'] = stats.groupby(level=0)['Fantasy_PPR'].shift(-1)\n",
+    "\n",
+    "#add the players team next year as well\n",
+    "stats['Team_NextYear'] = stats.groupby(level=0)['Team'].shift(-1)\n",
     "\n",
     "# check if NAs are in the new column\n",
     "stats.isna().sum()\n",
@@ -1168,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "b7dc88c6",
    "metadata": {},
    "outputs": [],
@@ -1208,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
