use full dataset

--- a/cleaning_data_NFL.ipynb
+++ b/cleaning_data_NFL.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "457f63ec",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "06810326",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "b8741c51",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "Ezekiel Elliott     2019           2.0  NaN  NaN        311.7  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "5b0acbb8",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "74e4a017",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "e65ba932",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
        "[469 rows x 20 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "0303f52b",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1103,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "add856b1",
    "metadata": {},
    "outputs": [
@@ -1141,7 +1141,7 @@
        "(2554, 22)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "b7dc88c6",
    "metadata": {},
    "outputs": [],
@@ -1179,19 +1179,8 @@
     "# Save the 2024 data for future use\n",
     "data_2024.to_csv(\"clean_data/data_2024.csv\")\n",
     "\n",
-    "#seperate the data by position for future use\n",
-    "\n",
-    "pos = clean_stats['Position']\n",
-    "\n",
-    "data_QB = clean_stats[pos.eq('QB')]\n",
-    "data_RB = clean_stats[pos.isin(['RB', 'FB'])]  #include FBs with RBs as many fantasy apps do not have a separate FB position\n",
-    "data_WR = clean_stats[pos.eq('WR')]\n",
-    "data_TE = clean_stats[pos.eq('TE')]\n",
-    "\n",
-    "data_QB.to_csv(\"clean_data/data_QB.csv\")\n",
-    "data_RB.to_csv(\"clean_data/data_RB.csv\")\n",
-    "data_WR.to_csv(\"clean_data/data_WR.csv\")\n",
-    "data_TE.to_csv(\"clean_data/data_TE.csv\")\n"
+    "# Save the cleaned data to a new csv\n",
+    "clean_stats.to_csv(\"clean_data/clean_stats.csv\")\n"
    ]
   }
  ],
