attached target to rookies data

--- a/clean_rookies.ipynb
+++ b/clean_rookies.ipynb
@@ -3633,11 +3633,422 @@
     "final_2025_rookies = final_df[final_df['Draft_Year'] == 2025]\n",
     "final_rookies = final_rookies[final_rookies['Draft_Year'] != 2025]\n",
     "\n",
-    "#save the final data\n",
-    "final_rookies.to_csv('clean_data/final_rookies.csv', index=False)\n",
-    "final_2025_rookies.to_csv('clean_data/final_2025_rookies.csv', index=False)\n",
+    "final_2025_rookies.to_csv(\"clean_data/final_2025_rookies.csv\")\n",
     "\n",
-    "final_rookies.head()\n"
+    "final_rookies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c6bcfe22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Fantasy_PPR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Christian McCaffrey</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>RB</td>\n",
+       "      <td>471.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lamar Jackson</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>BAL</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>415.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Derrick Henry</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>TEN</td>\n",
+       "      <td>RB</td>\n",
+       "      <td>294.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aaron Jones</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>GNB</td>\n",
+       "      <td>RB</td>\n",
+       "      <td>314.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ezekiel Elliott</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>RB</td>\n",
+       "      <td>311.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Player  Year Team Pos  Fantasy_PPR\n",
+       "0  Christian McCaffrey  2019  CAR  RB        471.2\n",
+       "1        Lamar Jackson  2019  BAL  QB        415.7\n",
+       "2        Derrick Henry  2019  TEN  RB        294.6\n",
+       "3          Aaron Jones  2019  GNB  RB        314.8\n",
+       "4      Ezekiel Elliott  2019  DAL  RB        311.7"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add target variable (fantasy points)\n",
+    "\n",
+    "#load other data into one dataset\n",
+    "path = \"newdata/\"\n",
+    "stats2019 = pd.read_csv(path + \"2019statsraw.csv\",header=[0,1])\n",
+    "stats2020 = pd.read_csv(path + \"2020statsraw.csv\",header=[0,1])\n",
+    "stats2021 = pd.read_csv(path + \"2021statsraw.csv\",header=[0,1])\n",
+    "stats2022 = pd.read_csv(path + \"2022statsraw.csv\",header=[0,1])\n",
+    "stats2023 = pd.read_csv(path + \"2023statsraw.csv\",header=[0,1])\n",
+    "stats2024 = pd.read_csv(path + \"2024statsraw.csv\",header=[0,1])\n",
+    "\n",
+    "stats2019[('Year',' ')] = 2019\n",
+    "stats2020[('Year',' ')] = 2020\n",
+    "stats2021[('Year',' ')] = 2021\n",
+    "stats2022[('Year',' ')] = 2022\n",
+    "stats2023[('Year',' ')] = 2023\n",
+    "stats2024[('Year',' ')] = 2024\n",
+    "\n",
+    "# combine all dataframes into one\n",
+    "stats_raw = pd.concat([stats2019,stats2020,stats2021,stats2022,stats2023,stats2024])\n",
+    "stats_raw.columns = ['_'.join(col).strip() for col in stats_raw.columns.values]\n",
+    "\n",
+    "# drop underscores that are not needed\n",
+    "stats_raw.columns = [c.replace('__', '_').replace('-', '').strip('_') for c in stats_raw.columns]\n",
+    "\n",
+    "# keep only names, year, and fantasy ppr points\n",
+    "#rename first \n",
+    "stats_raw = stats_raw.rename(columns={\"Unnamed: 1_level_0_Player\":\"Player\",\"Unnamed: 2_level_0_Tm\":\"Team\",\"Unnamed: 3_level_0_FantPos\":\"Pos\"})\n",
+    "stats_raw = stats_raw[[\"Player\",\"Year\",\"Team\",\"Pos\",\"Fantasy_PPR\"]]\n",
+    "stats_raw['Player'] = stats_raw['Player'].str.replace(r'[\\*\\+]', '', regex=True)\n",
+    "stats_raw.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e18c7ee",
+   "metadata": {},
+   "source": [
+    "### Join the fantasy points to the rookies data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ba0b224d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Draft_Year</th>\n",
+       "      <th>Round</th>\n",
+       "      <th>Pick</th>\n",
+       "      <th>College_Team</th>\n",
+       "      <th>Player_draft</th>\n",
+       "      <th>College_Pos</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>College_draft</th>\n",
+       "      <th>Conf</th>\n",
+       "      <th>G</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Rushing_TD</th>\n",
+       "      <th>Rec</th>\n",
+       "      <th>Receiving_Yds</th>\n",
+       "      <th>Receiving_TD</th>\n",
+       "      <th>Player_key</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>NFL_Team</th>\n",
+       "      <th>NFL_Pos</th>\n",
+       "      <th>Fantasy_PPR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>Joe Burrow</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>LSU</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>joe burrow</td>\n",
+       "      <td>Joe Burrow</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>173.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>Tua Tagovailoa</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>tua tagovailoa</td>\n",
+       "      <td>Tua Tagovailoa</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>135.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>Justin Herbert</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>Pac-12</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>justin herbert</td>\n",
+       "      <td>Justin Herbert</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>332.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>LVR</td>\n",
+       "      <td>Henry Ruggs III</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>746.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>henry ruggs</td>\n",
+       "      <td>Henry Ruggs III</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>LVR</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>Jerry Jeudy</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1163.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>jerry jeudy</td>\n",
+       "      <td>Jerry Jeudy</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>157.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Draft_Year  Round  Pick College_Team     Player_draft College_Pos   Age  \\\n",
+       "0        2020      1     1          CIN       Joe Burrow          QB  23.0   \n",
+       "1        2020      1     5          MIA   Tua Tagovailoa          QB  22.0   \n",
+       "2        2020      1     6          LAC   Justin Herbert          QB  22.0   \n",
+       "3        2020      1    12          LVR  Henry Ruggs III          WR  21.0   \n",
+       "4        2020      1    15          DEN      Jerry Jeudy          WR  21.0   \n",
+       "\n",
+       "  College_draft    Conf     G  ...  Rushing_TD   Rec  Receiving_Yds  \\\n",
+       "0           LSU     SEC  15.0  ...         5.0   1.0           16.0   \n",
+       "1       Alabama     SEC   9.0  ...         2.0   0.0            0.0   \n",
+       "2        Oregon  Pac-12  14.0  ...         4.0   0.0            0.0   \n",
+       "3       Alabama     SEC  12.0  ...         1.0  40.0          746.0   \n",
+       "4       Alabama     SEC  13.0  ...         0.0  77.0         1163.0   \n",
+       "\n",
+       "   Receiving_TD      Player_key           Player  Year  NFL_Team  NFL_Pos  \\\n",
+       "0           0.0      joe burrow       Joe Burrow  2020       CIN       QB   \n",
+       "1           0.0  tua tagovailoa   Tua Tagovailoa  2020       MIA       QB   \n",
+       "2           0.0  justin herbert   Justin Herbert  2020       LAC       QB   \n",
+       "3           7.0     henry ruggs  Henry Ruggs III  2020       LVR       WR   \n",
+       "4          10.0     jerry jeudy      Jerry Jeudy  2020       DEN       WR   \n",
+       "\n",
+       "   Fantasy_PPR  \n",
+       "0        173.7  \n",
+       "1        135.5  \n",
+       "2        332.8  \n",
+       "3         84.1  \n",
+       "4        157.6  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def normalize_name(s):\n",
+    "    if pd.isna(s): \n",
+    "        return \"\"\n",
+    "    s = s.lower().strip()\n",
+    "    # drop suffixes\n",
+    "    s = re.sub(r',?\\s*\\b(jr|sr|ii|iii|iv|v)\\.?$', '', s)\n",
+    "    # remove punctuation\n",
+    "    s = re.sub(r\"[^\\w\\s]\", \"\", s)\n",
+    "    # collapse whitespace\n",
+    "    s = re.sub(r\"\\s+\", \" \", s).strip()\n",
+    "    return s\n",
+    "\n",
+    "left = final_rookies.copy()\n",
+    "right = stats_raw.copy()\n",
+    "\n",
+    "left[\"Player_key\"]  = left[\"Player_draft\"].map(normalize_name)\n",
+    "right[\"Player_key\"] = right[\"Player\"].map(normalize_name)\n",
+    "\n",
+    "# Ensure year dtypes line up\n",
+    "left[\"Draft_Year\"] = pd.to_numeric(left[\"Draft_Year\"], errors=\"coerce\").astype(\"Int64\")\n",
+    "right[\"Year\"]      = pd.to_numeric(right[\"Year\"], errors=\"coerce\").astype(\"Int64\")\n",
+    "\n",
+    "# --- 2) Don’t join on Team/Pos across these datasets ---\n",
+    "# (College team/position vs NFL team/position are not the same fields)\n",
+    "# Keep them, but rename to avoid confusion\n",
+    "left  = left.rename(columns={\"Team\":\"College_Team\", \"Position\":\"College_Pos\"})\n",
+    "right = right.rename(columns={\"Team\":\"NFL_Team\",    \"Pos\":\"NFL_Pos\"})\n",
+    "\n",
+    "# --- 3) Pick a join logic ---\n",
+    "# A) Rookie-season only: fantasy Year == Draft_Year\n",
+    "rookies_join = pd.merge(\n",
+    "    left,\n",
+    "    right,\n",
+    "    how=\"left\",\n",
+    "    left_on=[\"Player_key\", \"Draft_Year\"],\n",
+    "    right_on=[\"Player_key\", \"Year\"],\n",
+    "    suffixes=(\"\", \"_fantasy\")\n",
+    ")\n",
+    "\n",
+    "rookies_join.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "640cad8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Rename and reorder columns\n",
+    "final_rookies = rookies_join[[\"Player_draft\",\"Draft_Year\",\"College_Pos\",\"Age\",\"College_Team\",\"Round\",\"Pick\",\"College_draft\",\"Conf\",\"G\",'Cmp', 'Pass_Att',\n",
+    "       'Pass_Yds', 'Pass_TD', 'Int', 'Rushing_Att', 'Rushing_Yds',\n",
+    "       'Rushing_TD', 'Rec', 'Receiving_Yds', 'Receiving_TD','Fantasy_PPR']]\n",
+    "\n",
+    "final_rookies = final_rookies.rename(columns={\"College_Team\":\"Team\",\"Player_draft\":\"Player\",\"College_Pos\":\"Pos\",\"College_draft\":\"College\",\"Fantasy_PPR\":\"Target\"})\n",
+    "\n",
+    "final_rookies.fillna(0)\n",
+    "\n",
+    "final_rookies.head()\n",
+    "\n",
+    "final_rookies.to_csv(\"clean_data/final_rookies.csv\", index = False)"
    ]
   }
  ],
