added the conference rankings

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -1607,6 +1607,327 @@
     "\n",
     "These features will include their college's ranking and also their conferences ranking"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fa7dbd80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rk</th>\n",
+       "      <th>Conf</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Draft_Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Big Ten</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Big 12</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Pac-12</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>American</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rk      Conf  Year  Draft_Year\n",
+       "0   1       SEC  2019        2020\n",
+       "1   2   Big Ten  2019        2020\n",
+       "2   3    Big 12  2019        2020\n",
+       "3   4    Pac-12  2019        2020\n",
+       "4   5  American  2019        2020"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# join the conference rankings with the players\n",
+    "conf_rks = pd.read_csv(\"other features/conference_rankings.csv\")\n",
+    "\n",
+    "conf_rks[\"Draft_Year\"] = conf_rks[\"Year\"] + 1\n",
+    "conf_rks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "977048d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Draft_Year</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Round</th>\n",
+       "      <th>Pick</th>\n",
+       "      <th>College</th>\n",
+       "      <th>Conf</th>\n",
+       "      <th>G</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Rushing_Att</th>\n",
+       "      <th>Rushing_Yds</th>\n",
+       "      <th>Rushing_TD</th>\n",
+       "      <th>Rec</th>\n",
+       "      <th>Receiving_Yds</th>\n",
+       "      <th>Receiving_TD</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>ASA_zscore</th>\n",
+       "      <th>Preseason_Rank</th>\n",
+       "      <th>Conf_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joe Burrow</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LSU</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>368.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>173.7</td>\n",
+       "      <td>-0.590498</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tua Tagovailoa</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>135.5</td>\n",
+       "      <td>1.180997</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Justin Herbert</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>Pac-12</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>332.8</td>\n",
+       "      <td>1.377829</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Henry Ruggs III</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>LVR</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>746.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>84.1</td>\n",
+       "      <td>-0.590498</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jerry Jeudy</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>SEC</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1163.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>157.6</td>\n",
+       "      <td>-0.393666</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Player  Draft_Year Pos   Age Team  Round  Pick  College    Conf  \\\n",
+       "0       Joe Burrow        2020  QB  23.0  CIN      1     1      LSU     SEC   \n",
+       "1   Tua Tagovailoa        2020  QB  22.0  MIA      1     5  Alabama     SEC   \n",
+       "2   Justin Herbert        2020  QB  22.0  LAC      1     6   Oregon  Pac-12   \n",
+       "3  Henry Ruggs III        2020  WR  21.0  LVR      1    12  Alabama     SEC   \n",
+       "4      Jerry Jeudy        2020  WR  21.0  DEN      1    15  Alabama     SEC   \n",
+       "\n",
+       "      G  ...  Rushing_Att  Rushing_Yds  Rushing_TD   Rec  Receiving_Yds  \\\n",
+       "0  15.0  ...        115.0        368.0         5.0   1.0           16.0   \n",
+       "1   9.0  ...         23.0         17.0         2.0   0.0            0.0   \n",
+       "2  14.0  ...         58.0         50.0         4.0   0.0            0.0   \n",
+       "3  12.0  ...          2.0         75.0         1.0  40.0          746.0   \n",
+       "4  13.0  ...          1.0          1.0         0.0  77.0         1163.0   \n",
+       "\n",
+       "   Receiving_TD  Target  ASA_zscore  Preseason_Rank  Conf_rank  \n",
+       "0           0.0   173.7   -0.590498              30          1  \n",
+       "1           0.0   135.5    1.180997              26          1  \n",
+       "2           0.0   332.8    1.377829              24          4  \n",
+       "3           7.0    84.1   -0.590498              21          1  \n",
+       "4          10.0   157.6   -0.393666              23          1  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "college_confs = college_with_rank.merge(\n",
+    "    conf_rks.rename(columns={\"Rk\":\"Conf_rank\"})[[\"Conf_rank\",\"Conf\",\"Draft_Year\"]],\n",
+    "    how = \"left\",\n",
+    "    on=[\"Conf\",\"Draft_Year\"]\n",
+    ")\n",
+    "\n",
+    "college_confs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae9b4ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
