--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -1922,12 +1922,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ae9b4ce9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Now we need to add the team rankings"
+   ]
   }
  ],
  "metadata": {
